--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: ./.github/actions/build-push-ecr
         with:
           module-name: frontend
-          extra-build-args: -f prod.Dockerfile
+          extra-build-args: --build-arg BUILD_FOR_ENVIRONMENT=development
           image-name: frontend-prod
           src-path: ./
 
