--- a/.github/workflows/prod-deploy-on-release.yml
+++ b/.github/workflows/prod-deploy-on-release.yml
@@ -18,7 +18,7 @@ jobs:
       - uses: ./.github/actions/build-push-ecr
         with:
           module-name: frontend
-          extra-build-args: -f prod.Dockerfile
+          extra-build-args: --build-arg BUILD_FOR_ENVIRONMENT=production
           image-name: frontend-prod
           src-path: ./
 
