trying to deploy

--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -31,10 +31,8 @@ jobs:
   #     - uses: ./.github/actions/build-push-ecr
   #       with:
   #         module-name: frontend
-  #         build-for-environment: development
-  #         image-name: frontend-prod
+  #         build-for-environment: production
   #         src-path: ./
-  #
   #
   # test-web:
   #   runs-on: [self-hosted, master]
@@ -67,35 +65,37 @@ jobs:
   #         yarn build-storybook
   #
   #
-  #
-  # # We need to use the deployment name and url in the 'environment' section of the deployment job below
-  # # We need then as job outputs to workaround a limitation of github actions: https://github.com/actions/runner/issues/998
-  # set-env:
-  #   runs-on: [self-hosted, master]
-  #   needs: [test-web, test-web-prettier, test-storybook]
-  #   outputs:
-  #     environment_name: ${{ steps.set-envs.outputs.envname }}
-  #     environment_url: ${{ steps.set-envs.outputs.envurl }}
-  #     environment_slug: "dev"
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: ./.github/actions/setup-env
-  #     - id: set-envs
-  #       run: |
-  #         echo "::set-output name=envname::${{env.ENV_NAME}}"
-  #         echo "::set-output name=envurl::${{env.ENV_URL}}"
-  #
-  #
-  # deploy-dev:
-  #   runs-on: [self-hosted, master]
-  #   needs: set-env
-  #   environment:
-  #     name: ${{ needs.set-env.outputs.environment_name }}
-  #     url: ${{ needs.set-env.outputs.environment_url }}
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: ./.github/actions/setup-env
-  #     - uses: ./.github/actions/helm-deploy
-  #       with:
-  #         environment-slug: ${{ needs.set-env.outputs.environment_slug }}
-  #         environment-name: ${{ needs.set-env.outputs.environment_name }}
+
+  # We need to use the deployment name and url in the 'environment' section of the deployment job below
+  # We need then as job outputs to workaround a limitation of github actions: https://github.com/actions/runner/issues/998
+  set-env:
+    runs-on: [self-hosted, master]
+    needs: [build]
+    # needs: [test-web, test-web-prettier, test-storybook]
+    outputs:
+      environment_name: ${{ steps.set-envs.outputs.envname }}
+      environment_url: ${{ steps.set-envs.outputs.envurl }}
+      environment_slug: "dev"
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/setup-env
+      - id: set-envs
+        run: |
+          echo "::set-output name=envname::${{env.ENV_NAME}}"
+          echo "::set-output name=envurl::${{env.ENV_URL}}"
+
+
+  deploy-dev:
+    runs-on: [self-hosted, master]
+    needs: set-env
+    environment:
+      name: ${{ needs.set-env.outputs.environment_name }}
+      url: ${{ needs.set-env.outputs.environment_url }}
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/setup-env
+      - uses: ./.github/actions/helm-deploy
+        with:
+          environment-slug: ${{ needs.set-env.outputs.environment_slug }}
+          environment-name: ${{ needs.set-env.outputs.environment_name }}
+          image-tag: development-${{ env.SLUG }}
