removing proto building, enabling tests

--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -16,62 +16,56 @@ jobs:
     runs-on: [self-hosted, master]
     steps:
       - uses: actions/checkout@v2
-      - uses: ./.github/actions/generate-protos
       - uses: ./.github/actions/build-push-ecr
         with:
           module-name: frontend
           build-for-environment: development
           src-path: ./
 
-  # build-prod:
-  #   runs-on: [self-hosted, master]
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: ./.github/actions/generate-protos
-  #     - uses: ./.github/actions/build-push-ecr
-  #       with:
-  #         module-name: frontend
-  #         build-for-environment: production
-  #         src-path: ./
-  #
-  # test-web:
-  #   runs-on: [self-hosted, master]
-  #   needs: build
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: ./.github/actions/generate-protos
-  #     - run: |
-  #         yarn install
-  #         yarn test-ci
-  #
-  # test-web-prettier:
-  #   runs-on: [self-hosted, master]
-  #   needs: build
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: ./.github/actions/generate-protos
-  #     - run: |
-  #         yarn install
-  #         yarn prettier --check *
-  #
-  # test-storybook:
-  #   runs-on: [self-hosted, master]
-  #   needs: build
-  #   steps:
-  #     - uses: actions/checkout@v2
-  #     - uses: ./.github/actions/generate-protos
-  #     - run: |
-  #         yarn install
-  #         yarn build-storybook
-  #
-  #
+  build-prod:
+    runs-on: [self-hosted, master]
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ./.github/actions/build-push-ecr
+        with:
+          module-name: frontend
+          build-for-environment: production
+          src-path: ./
+
+  test-web:
+    runs-on: [self-hosted, master]
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+          yarn install
+          yarn test-ci
+
+  test-web-prettier:
+    runs-on: [self-hosted, master]
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+          yarn install
+          yarn prettier --check *
+
+  test-storybook:
+    runs-on: [self-hosted, master]
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - run: |
+          yarn install
+          yarn build-storybook
+
+
 
   # We need to use the deployment name and url in the 'environment' section of the deployment job below
   # We need then as job outputs to workaround a limitation of github actions: https://github.com/actions/runner/issues/998
   set-env:
     runs-on: [self-hosted, master]
-    needs: [build]
-    # needs: [test-web, test-web-prettier, test-storybook]
+    needs: [test-web, test-web-prettier, test-storybook]
     outputs:
       environment_name: ${{ steps.set-envs.outputs.envname }}
       environment_url: ${{ steps.set-envs.outputs.envurl }}
