--- a/Dockerfile.stage
+++ b/Dockerfile.stage
@@ -1,8 +1,10 @@
 ####################################################################
 # Multi-Stage Docker Image for Couchers Frontend with Next.js
 #
-# Note: This is intentionally the first half of the Dockerfile.
-#   This is used for caching purposes to speed up builds
+# Taken bits for this Dockerfile from various places, for next.js from here
+#      See: https://www.koyeb.com/tutorials/how-to-dockerize-and-deploy-a-next-js-application-on-koyeb
+#
+# WARNING: If you change the Dockerfile, you must update Dockerfile.stage with the first stage or things won't cache
 #
 #  Original Author: Farley
 ####################################################################
@@ -27,8 +29,9 @@ RUN yarn install --frozen-lockfile
 # Now copy the source code and build when needed against the env type
 ARG BUILD_FOR_ENVIRONMENT
 COPY . .
-# And add our pre-compiled protos since we won't be updating our backend any more
-ADD http://couchers-dev-assets.s3.amazonaws.com/proto_may_27_2022.tar.gz /app/
+# And add our pre-compiled protos since we won't be updating our backend any more.
+#  NOTE: REMOVED this line this doesn't cache reliably from an URL, pre-downloaded into our repo instead
+# ADD http://couchers-dev-assets.s3.amazonaws.com/proto_may_27_2022.tar.gz /app/
 
 # Expand our protos into place, set the right env vars into place, then build our static assets
 RUN tar -xf proto_may_27_2022.tar.gz && \
