--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -36,6 +36,7 @@ jobs:
     runs-on: [self-hosted, master]
     needs: build
     steps:
+      - uses: actions/checkout@v2
       - uses: ./.github/actions/setup-env
       - shell: bash
         run: |
