--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -42,7 +42,7 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
       - shell: bash
         run: |
-          REPO_IMAGE=${{ steps.login-ecr.outputs.registry }}/${{ inputs.module-name }}
+          REPO_IMAGE=${{ steps.login-ecr.outputs.registry }}/frontend
           TEST_IMAGE_TAG=development-${{ env.SLUG }}-stage
           REPO_IMAGE_AND_TAG=$REPO_IMAGE:$TEST_IMAGE_TAG
           docker pull $REPO_IMAGE_AND_TAG
