fixing prettier I think

--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -61,7 +61,7 @@ jobs:
         run: |
           REPO_IMAGE_AND_TAG=${{ steps.login-ecr.outputs.registry }}/frontend:development-${{ env.SLUG }}-stage
           docker pull $REPO_IMAGE_AND_TAG
-          docker run $REPO_IMAGE_AND_TAG yarn prettier --check *
+          docker run $REPO_IMAGE_AND_TAG yarn prettier --check \*
 
   test-storybook:
     runs-on: [self-hosted, master]
