--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -23,14 +23,14 @@ jobs:
           {
             "username": "Github Actions - Deploy Notification",
             "icon_url": "https://avatars.githubusercontent.com/u/44036562?s=280&v=4",
-            "text": "$GITHUB_REPOSITORY was Deployed to Development",
+            "text": "${{ github.repository }} was Deployed to Development",
             "channel": "C03GZ4K7C7R",
             "blocks": [
               {
                 "type": "section",
                 "text": {
                   "type": "mrkdwn",
-                  "text": "$GITHUB_ACTOR has just deployed [$GITHUB_REPOSITORY|https://github.com/$GITHUB_REPOSITORY] to [Development](https://couchers.org).\n*Ref:* [${{github.ref_name}}](https://github.com/$GITHUB_REPOSITORY/releases/tag/${{github.ref_name}})"
+                  "text": "${{ github.actor }} has just deployed [${{ github.repository }}|https://github.com/${{ github.repository }}] to [Development](https://couchers.org).\n*Ref:* [${{ github.ref_name }}](https://github.com/${{ github.repository }}/releases/tag/${{ github.ref_name }})"
                 }
               }
             ]
