--- a/.github/workflows/prod-deploy-on-release.yml
+++ b/.github/workflows/prod-deploy-on-release.yml
@@ -40,23 +40,19 @@ jobs:
     steps:
       - uses: slackapi/slack-github-action@v1.18.0
         with:
+           # C03GZ4K7C7R = Channel #deployment-notifications
           payload: |
             {
-              "text": "Web-Frontend was Deployed to Production",
-              "channel": "C01PWQEJ2SY",
+              "username": "Github Actions - Deploy Notification",
+              "icon_url": "https://avatars.githubusercontent.com/u/44036562?s=280&v=4",
+              "text": "${{ github.repository }} was Deployed to Production",
+              "channel": "C03GZ4K7C7R",
               "blocks": [
-                {
-                  "type": "header",
-                  "text": {
-                    "type": "plain_text",
-                    "text": "Web-Frontend was Deployed to Production"
-                  }
-                },
                 {
                   "type": "section",
                   "text": {
                     "type": "mrkdwn",
-                    "text": "The web frontend was just deployed to <https://couchers.org|production>.\n*Ref:* ${{github.ref_name}}"
+                    "text": "We have just deployed <https://github.com/${{ github.repository }}|${{ github.repository }}> to <https://couchers.org|Production>.\n*User*: <https://github.com/${{ github.actor }}|${{ github.actor }}>\n*Ref:* <https://github.com/${{ github.repository }}/releases/tag/${{ github.ref_name }}|${{ github.ref_name }}>"
                   }
                 }
               ]
