--- a/.github/workflows/dev-docker-build-and-deploy-on-push.yml
+++ b/.github/workflows/dev-docker-build-and-deploy-on-push.yml
@@ -14,6 +14,7 @@ jobs:
 
 
   build:
+    runs-on: [self-hosted, master]
     steps:
       - uses: actions/checkout@v2
       - uses: ./.github/actions/build-push-ecr
