re-enabling all of dev stuff in github actions

--- a/deployment/web-frontend/values.yaml
+++ b/deployment/web-frontend/values.yaml
@@ -13,9 +13,6 @@ deployment:
   image:
     # This is where we pull the docker image from
     repository: 694904428454.dkr.ecr.us-east-1.amazonaws.com/frontend
-    # Couchers never used this in anything except "yarn dev" supposedly.
-    # TODO: Fix this please someone, make yarn start non-dev mode work
-    # command: ["yarn", "dev"]
     # If you need to debug this container or manually import/delete a database, uncomment these next two lines then kubectl exec into the pod
     #   Reminder: you'll also need to disable probes otherwise it will auto-restart on you
     # command: ["/bin/sh"]
@@ -60,6 +57,10 @@ deployment:
     enabled: false # Disable by default, enabled on prod only
     minReplicas: 3
     targetMemoryUtilizationPercentage: null  # Disable scaling by RAM usage
+
+  # globalEnvs:
+  #   - name: NODE_DEBUG
+  #     value: "http,fs,cluster,child_process,module"
 
   # Ingress is enabled because this is a public-facing service, we set the URL(s) in the values-env files
   ingress:
