Making only run on pushes to master, which will also trigger when merged to

--- a/.github/workflows/staging-deploy-on-merge.yml
+++ b/.github/workflows/staging-deploy-on-merge.yml
@@ -1,12 +1,12 @@
 name: Staging - Deploy Frontend on Merge
 
 on:
-  pull_request:
-    types: [closed]
-    branches: [master]
   push:
     branches:
       - master
+#  pull_request:
+#    types: [closed]
+#    branches: [master]
 
 
 defaults:
