add timeout fix to dockerfiles

--- a/Dockerfile.stage
+++ b/Dockerfile.stage
@@ -24,6 +24,8 @@ ENV NEXT_TELEMETRY_DISABLED 1
 
 # Install deps for layer caching
 COPY package.json yarn.lock ./
+# https://github.com/yarnpkg/yarn/issues/8242
+RUN yarn config set network-timeout 300000
 RUN yarn install --frozen-lockfile
 
 # Now copy the source code and build when needed against the env type
