--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dev": "next dev",
     "start": "yarn dev",
     "format": "prettier --write *",
+    "generate-api": "yarn openapi-generator-cli generate -g typescript-fetch -i https://backend-v2-dev.couchers.dev/schema/ -o api/",
     "jest": "jest --modulePaths=.",
     "lint": "next lint",
     "serve": "next start",
@@ -57,6 +58,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.17.10",
+    "@openapitools/openapi-generator-cli": "^2.5.1",
     "@storybook/addon-actions": "^6.5.7",
     "@storybook/addon-essentials": "^6.4.22",
     "@storybook/addon-links": "^6.5.7",
