--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "eslint-plugin-unused-imports": "^2.0.0",
     "i18next-resources-to-backend": "^1.0.0",
     "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "jest-junit": "^13.2.0",
     "msw": "^0.42.0",
     "next-router-mock": "^0.6.9",
