--- a/.github/workflows/prod-deploy-on-release.yml
+++ b/.github/workflows/prod-deploy-on-release.yml
@@ -1,8 +1,9 @@
 name: Prod - Deploy Frontend on Release
 
 on:
-  release:
-    types: [published]
+  workflow_call:
+  # release:
+  #   types: [published]
 
 defaults:
   run:
