--- a/.github/workflows/staging-deploy-on-merge.yml
+++ b/.github/workflows/staging-deploy-on-merge.yml
@@ -1,9 +1,10 @@
 name: Staging - Deploy Frontend on Merge
 
 on:
-  push:
-    branches:
-      - master
+  workflow_call:
+  # push:
+  #   branches:
+  #     - master
 #  pull_request:
 #    types: [closed]
 #    branches: [master]
